--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear </title>
+    <!-- box icon links -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        
+        <div class="header-container"> 
+            <div class="header-logo"> 
+                <h3>Influencer products</h3>
+            </div>
+            <div class="header-menu"> 
+                <nav> 
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Sing Up</a></li>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#"><i class='bx bx-search-alt-2'></i> </a></li>
+                        <li><a href="#"> <i class='bx bx-shopping-bag'></i></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
 
