--- a/index.html
+++ b/index.html
@@ -10,26 +10,49 @@
 </head>
 <body>
     <header>
-        <div class="header-container"> 
-            <div class="header-logo"> 
-                <h3>Influencer products</h3>
+        <section class="header"> 
+            <div class="header-container"> 
+                <div class="header-logo"> 
+                    <h3>Influencer products</h3>
+                </div>
+                <div class="header-menu"> 
+                    <nav> 
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Sing Up</a></li>
+                            <li><a href="#">Log In</a></li>
+                            <li><a href="#"><i class='bx bx-search-alt-2'></i> </a></li>
+                            <li><a href="#"> <i class='bx bx-shopping-bag'></i></a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <div class="header-menu"> 
-                <nav> 
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Sing Up</a></li>
-                        <li><a href="#">Log In</a></li>
-                        <li><a href="#"><i class='bx bx-search-alt-2'></i> </a></li>
-                        <li><a href="#"> <i class='bx bx-shopping-bag'></i></a></li>
-                    </ul>
-                </nav>
+            <div class="banner-container"> 
+                <div class="banner-content">
+                    <h1 class="banner-title"> Start your Journey as 
+                        Influencer </h1>
+                    <p class="banner-disc"> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.
+                    </p>
+                    <button class="btn-banner"> Preebook now <i class='bx bx-right-arrow-alt'></i> </button>
+                </div>
+                <div class="banner-logo">
+                    <img src="./images/main-camera.png" alt="">
+                </div>
             </div>
-        </div>
+        </section>
     </header>
     <main>
-
+        <div class="sponsor-container"> 
+            <img src="./logos/Alibaba.svg" alt="">
+            <img src="./logos/Amazon.svg" alt="">
+            <img src="./logos/Daraz.pk Logo.svg" alt="">
+            <img src="./logos/Ebay.svg" alt="">
+            <img src="./logos/Rakuten.svg" alt="">
+            <img src="./logos/Target.svg" alt="">
+            <img src="./logos/Walmart.svg" alt="">
+        </div>
     </main>
     <footer> 
 
