add collection and footer

--- a/index.html
+++ b/index.html
@@ -53,9 +53,113 @@
             <img src="./logos/Target.svg" alt="">
             <img src="./logos/Walmart.svg" alt="">
         </div>
+        <div class="popular-collection"> 
+            <h2>Popular Collection</h2>
+            <div class="popular-collection-container"> 
+                <div class="popular-collection-box">
+                    <img src="./images/tripod.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h5>$180.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="popular-collection-box">
+                    <img src="./images/mic.png" alt="">
+                    <h2>microphone</h2>
+                    <h5>$120.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="popular-collection-box">
+                    <img src="./images/airpod.png" alt="">
+                    <h2>Airbuds</h2>
+                    <h5>$100.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="popular-collection-container"> 
+                <div class="popular-collection-box">
+                    <img src="./images/drone.png" alt="">
+                    <h2>Drone</h2>
+                    <h5>$980.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="popular-collection-box">
+                    <img src="./images/lights.png" alt="">
+                    <h2>Light Setup</h2>
+                    <h5>$1200.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="popular-collection-box">
+                    <img src="./images/main-camera.png" alt="">
+                    <h2>Photoshoot set</h2>
+                    <h5>$825</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="popular-collection-container"> 
+                <div class="popular-collection-box">
+                    <img src="./images/camera.png" alt="">
+                    <h2>Vlogging Camera</h2>
+                    <h5>$180.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="popular-collection-box">
+                    <img src="./images/single-light.png" alt="">
+                    <h2>Green Screen</h2>
+                    <h5>$120.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="popular-collection-box">
+                    <img src="./images/action.png" alt="">
+                    <h2>Action Camera</h2>
+                    <h5>$100.25</h5>
+                    <p class="rating"><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i> <i class='bx bxs-star-half' ></i>4.99</p>
+                    <p class="popular-disc">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+
+            </div>
+        </div>
+        <section class="featured-container"> 
+                <div class="featured-photo">
+                    <img src="./images/gear.png" alt="">
+                </div>
+                <div class="featured-content">
+                    <h1 class="featured-title">Featured products at one place</h1>
+                    <p class="featured-disc"> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn-featured"> Join Now <i class='bx bx-right-arrow-alt'></i> </button>
+                </div>
+        </section>
     </main>
     <footer> 
-
+        <div class="footer-container"> 
+            <h1>Influencer products</h1>
+            <p> Copyright © 2020  influencer products</p>
+            <p> All rights reserved </p>
+            <ul>
+                <li><i class='bx bxl-instagram'></i> </li>
+                <li> <i class='bx bxl-dribbble' ></i> </li>
+                <li> <i class='bx bxl-twitter' ></i> </li>
+                <li> <i class='bx bxl-youtube' ></i> </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
